tests/should_fail/logic_alias/alias_defined_in_different_impls.stderr
error: Cannot use #[logic_alias] in this context, because logic function is defined in trait T1, and program function is defined for trait T2.
  --> alias_defined_in_different_impls.rs:27:5
   |
27 |     #[logic_alias(Self::is_zero_log)]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: function defined here
  --> alias_defined_in_different_impls.rs:28:5
   |
28 |     fn is_zero_prog(self) -> bool {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: logic function defined here
  --> alias_defined_in_different_impls.rs:12:5
   |
12 |     fn is_zero_log(self) -> bool;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: this error originates in the attribute macro `logic_alias` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 1 previous error

